build: add API doc generation into release job